--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently npm:dev:frontend npm:server",
+    "dev:frontend": "vite",
+    "server": "node server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -14,10 +16,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "razorpay": "^2.9.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -27,6 +33,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
+    "concurrently": "^8.2.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
