--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "razorpay": "^2.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
